--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
-@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url("https://fonts.googleapis.com/css?family=PT+Sans");
 
-html, body, .app {
+html,
+body,
+.app {
   text-align: center;
   background-image: url(./Components/Images/Login.jpg);
-  background-size:cover;
+  background-size: cover;
   background-attachment: fixed;
-
 }
 
 .form {
@@ -18,16 +19,17 @@ html, body, .app {
   width: 20%;
   position: relative;
   z-index: 100;
-  background-color: transparent;
-  box-shadow: 0px 0px 42px -8px rgba(0,0,0,1);
+  background-color: whitesmoke;
+  box-shadow: 0px 0px 42px -8px rgba(0, 0, 0, 1);
+  border-radius: 30px;
 }
 
 .form h2 {
-font-family: "Arial";
-margin-bottom: 0;
-color: white;
-font-weight: bold;
-font-size: 30px;
+  font-family: "Arial";
+  margin-bottom: 0;
+  color: #ffbd7f;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .input_boxes {
@@ -39,13 +41,16 @@ font-size: 30px;
 }
 
 .input_box {
-  margin: 10px; 
+  margin: 10px;
   padding: 10px;
-  width: 70%;
+  width: 80%;
   outline: none;
-  border: 1px none;
   font-family: "PT Sans";
-  background-color: #EFEFEF;
+  background-color: #efefef;
+  border-color: #cacaca;
+  border-width: 1px;
+  border-radius: 20px;
+  border-style: solid;
 }
 
 .btns {
@@ -59,32 +64,40 @@ font-size: 30px;
   width: 60%;
   margin-bottom: 20px;
   font-family: "Montserrat";
-  background-color: #399CFF;
+  background-color: #399cff;
   color: white;
   border: none;
   transition: 0.3s;
   padding: 10px;
+  border-radius: 20px;
 }
 
 .btn:nth-child(2) {
-  background-color: #5AAD5A;
+  background-color: #5aad5a;
 }
 
-.btn:hover, .btn:focus .btn_google:hover, .btn_google:focus {
-  box-shadow: 0px 0px 22px -8px rgba(0,0,0,1);
+.btn:hover,
+.btn:focus,
+.btn_google:hover,
+.btn_google:focus {
+  box-shadow: 0px 0px 22px -8px rgba(0, 0, 0, 1);
 }
 
 .btn_google {
+  background-color: transparent;
+  padding: 0;
   transition: 0.3s;
-  width: 60%;
+  border-radius: 100%;
+  border-width: 0px;
 }
 
+.header img {
+  width: 30%;
+}
 
-.line {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  width: 50%;
-  height: 1px;
-  background-color: #D6D6D6;
+.header h3 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: lighter;
+  margin: 0;
 }
